...
    <string name="gd_pm_valu_short" translatable="false">ValU</string>
    <string name="gd_pm_shahry">Shahry Installments</string>
    <string name="gd_pm_shahry_short">Shahry</string>
    <string name="gd_pm_souhoola">Souhoola Installments</string>
    <string name="gd_pm_souhoola_short">Souhoola</string>
    <string name="gd_pm_group_bnpl">Buy Now Pay Later</string>
    <string name="gd_btn_next">Next</string>
    <string name="gd_lets_find_your_pm">Let’s find out your payment method</string>
    <string name="gd_min_amount_required_s_s">%1$s require minimal amount of %2$s</string>
    <string name="gd_invalid_payment_options">Invalid payment options</string>
    <string name="gd_no_down_payment_methods">Merchant account does not have any payment methods configured</string>

    <!-- Meeza QR -->
...
    <string name="gd_label_total">Total</string>

    <string name="gd_label_date_time">Date/Time</string>
    <string name="gd_label_operation">Operation</string>
    <string name="gd_label_mobile_or_digital_id">Mobile No./Merchant ID</string>
    <string name="gd_label_username">Username</string>
    <string name="gd_label_geidea_order_id">Geidea Order ID</string>
    <string name="gd_label_merchant_ref_id">Merchant Reference ID</string>
    <string name="gd_label_meeza_transaction_id">Meeza transaction ID</string>
    <string name="gd_label_failure_reason">Failure reason</string>
    <string name="gd_redirect_message">You will be redirected automatically to merchant app after 15 sec</string>

    <string name="gd_receipt_try_again">Try Again</string>
    <string name="gd_receipt_load_failed">Failed to load transaction receipt!</string>

    <!-- BNPL -->

    <string name="gd_bnpl_phone_number">Phone number</string>
    <string name="gd_bnpl_purchase_with_s_confirmed">Your purchase with %1$s has been confirmed</string>
    <string name="gd_bnpl_total_amount">Total Amount</string>
    <string name="gd_bnpl_financed_amount">Financed Amount</string>
    <string name="gd_bnpl_installment_amount">Installment Amount</string>
    <string name="gd_bnpl_amount_vary_s">%1$s/<![CDATA[month<br><small>(may slightly vary)</small>]]></string>
    <string name="gd_bnpl_tenure">Tenure</string>
    <string name="gd_bnpl_down_payment">Down Payment</string>
    <string name="gd_bnpl_otp_sent">Your One Time Password has been sent to the registered phone number. Please enter the number below and tap on Finalize purchase button.</string>
    <string name="gd_bnpl_didnt_get_otp">Didn\'t get the OTP?</string>
    <string name="gd_bnpl_resend_otp">Resend Code</string>
    <string name="gd_bnpl_choose_installment_plan">Choose your preferred installment plan</string>
    <string name="gd_bnpl_fill_otp">Fill in the One-Time Password</string>
    <string name="gd_bnpl_n_months">%1$d Months</string>
    <string name="gd_bnpl_amount_per_month">%1$d/month</string>
    <string name="gd_bnpl_process_down_payment">Process Down Payment</string>
    <string name="gd_bnpl_installment_plans">Installment Plans</string>
    <string name="gd_bnpl_pay_upfront">Pay upfront</string>
    <string name="gd_bnpl_purchase_fees">Purchase Fees</string>
    <string name="gd_bnpl_provider_transaction_id_s">%1$s order ID</string>
    <string name="gd_bnpl_total_amount_upfront">Total amount to be paid upfront</string>
    <string name="gd_bnpl_finalize_purchase">Finalize purchase</string>
    <string name="gd_bnpl_down_payment_options">Choose how you want to pay for the down payment and purchase fees</string>
    <string name="gd_bnpl_pay_now"><![CDATA[Pay <b>%1$s</b> now, online]]></string>
    <string name="gd_bnpl_pay_on_delivery"><![CDATA[Pay <b>%1$s</b> in cash on delivery]]></string>
    <string name="gd_bnpl_missing_order_items">Missing order items</string>

    <!-- BNPL ValU -->

    <string name="gd_valu_confirm_phone_number">Confirm your phone number</string>
    <string name="gd_valu_to_u_balance">To-U Balance</string>
    <string name="gd_valu_cashback_amount">Cashback Amount</string>
    <string name="gd_valu_call_support">Please call 16671 for any inquiries. Thank you for using valU.</string>

    <!-- BNPL Shahry -->

    <string name="gd_shahry_confirm_id">Confirm your Shahry ID</string>
    <string name="gd_shahry_id">Shahry ID</string>
...
