...
    <include
        android:id="@+id/appBarWithStepper"
        layout="@layout/gd_include_appbar_with_stepper"
        />

    <androidx.core.widget.NestedScrollView
        android:id="@id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/currencyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/amountIntegerPartTextView"
                app:layout_constraintRight_toLeftOf="@+id/amountIntegerPartTextView"
                tools:text="EGP"
                />

            <TextView
                android:id="@+id/amountIntegerPartTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView"
                tools:text="2450"
                />

            <TextView
                android:id="@+id/amountFractionPartTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textDirection="ltr"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/amountIntegerPartTextView"
                app:layout_constraintLeft_toRightOf="@+id/amountIntegerPartTextView"
                tools:text=".00"
                />

            <LinearLayout
                android:id="@+id/idleStateLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
